Quick fix timeline overflow on mobile

--- a/src/components/Timeline/Timeline.module.css
+++ b/src/components/Timeline/Timeline.module.css
@@ -74,3 +74,9 @@
 /* .event:last-of-type {
   margin-bottom: 1em;
 } */
+
+@media (max-width: 500px) {
+  .event_wrapper {
+    flex-wrap: wrap;
+  }
+}
